0. Some early styling

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,11 +7,12 @@
          <meta charset="UTF-8">
          <link href="base.css" rel="stylesheet">
             <link href="styles.css" rel="stylesheet">
-         <!-- <style>
+         <style>
             table, th, td {
                 border: 1px solid black
             }
-         </style> -->
+
+         </style>
      </head>
      <body>
         <header>
