2. Responsive web design

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="works_on_smartphone">
             <article>
                 <div>
                     <h1>Header 1</h1>
@@ -36,7 +36,7 @@
                     <p>Paragraph 3</p>
                     <p>Paragraph 4</p>
                     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
-                        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="alx logo">
+                        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="alx logo" width="100%">
                     </a>
                 </div>
                 <table>
