--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -35,24 +36,24 @@
                 </div>
                 <div>
                     <div class="pros">
-                        <h2 >Learn from the pros</h2>
+                        <h2 ><strong>Learn</strong> from the pros</h2>
                         <div class="pro-tickets">
-                            <div class="pro-ticket">
+                            <div class="pro-user">
                                 <img src="./images/1.png" alt="" class="round-image">
                                 <h3>Phillip Massey</h3>
                                 <p>« Smile of the year » 2018 - 2019</p>
                             </div>
-                            <div class="pro-ticket">
+                            <div class="pro-user">
                                 <img src="./images/3.png" alt="" class="round-image">
                                 <h3>Nannie Lawrence</h3>
                                 <p>Best « little smile » 2017</p>
                             </div>
-                            <div class="pro-ticket">
+                            <div class="pro-user">
                                 <img src="./images/2.png" alt="" class="round-image">
                                 <h3>Bruce Walters</h3>
                                 <p>Best « Friend Smile » live performance 2019</p>
                             </div>
-                            <div class="pro-ticket">
+                            <div class="pro-user">
                                 <img src="./images/4.png" alt="" class="round-image">
                                 <h3>Henry Hughes</h3>
                                 <p>« 24h smiles » winner 2016 - 2019</p>
@@ -70,7 +71,7 @@
             </div>
             <div class="qoutes">
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
+                <h3>Person Name</h3>
                 <P>weather presenter</P>
             </div>
         </section>
