--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -77,6 +77,80 @@
         </section>
 
         <!-- Section 3 -->
+        <section class="section3">
+            <h2>Most <strong>popular</strong> tutorials</h2>
+            <div class="tutorial-lyout">
+                <div class="tutorial">
+                    <img src="./images/6.png" alt="">
+                    <h3>Diagonal Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="image icon" class="image-icon">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <p>8 min</p>
+                </div>
+                <div class="tutorial">
+                    <img src="./images/7.png" alt="">
+                    <h3>Happy Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="image icon" class="image-icon">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <p>8 min</p>
+                </div>
+                <div class="tutorial">
+                    <img src="./images/8.png" alt="">
+                    <h3>Natural Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="image icon" class="image-icon">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <p>8 min</p>
+                </div>
+                <div class="tutorial">
+                    <img src="./images/9.png" alt="">
+                    <h3>Sad Smile</h3>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    <div>
+                        <img src="./images/1.png" alt="image icon" class="image-icon">
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                        <div><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <p>8 min</p>
+                </div>
+            </div>
+        </section>
+
         <!-- Section 4 -->
         <!-- Section 5 -->
     </main>
