0. Dive into Python Magic Methods

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -6,14 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="0-styles.css">
         <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="stylesheet" href="/images/holberton_school-icon/style.css">
         <title>headphones</title>
     </head>
     <body>
 
-        <!-- Section 1  -->
+        <!-- Section 1 - Header -->
         <div class="section-1">
             <!-- Header Section -->
             <header class="header">
+                <div class="show-on-mobile">
+                    <input type="checkbox" id="menu-toggle" >
+                    <label class="menu-icon" for="menu-toggle">
+                        <span class="bar"></span>
+                        <span class="bar2"></span>
+                        <span class="bar"></span>
+                    </label>
+                </div>
                 <div class="icon">
                     <a href="#"><img src="/images/logo_headphones.png" alt=""></a>
                 </div>
@@ -27,8 +36,8 @@
             </header>
 
             <!-- Hero Section -->
-            <section class="hero-section">
-                <div >
+            <section class="hero-section intro">
+                <div>
                     <!-- text here need to be wrapped correctly -->
                     <h1 >Lorem ipsum dolor set<wbr /> lorem ipsum</h1>
                     <p>Lorem ipsum dolor set amet lorem ipsum dolor set</p>
@@ -43,6 +52,65 @@
                </p>
             </section>
         </div>
+        <!-- Section 2 - "What we do..." -->
+         <section class="section-2 column-flex">
+                <!-- Intro  -->
+                <div class="intro column-flex">
+                    <h2>What we do…</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    </p>
+                </div>
+                <!-- What we Do -->
+                <div class="what-we-do-container row-flex">
+                    <div class="ticket column-flex">
+                        <!-- Replave this image with the wanwted icon from the folder inside -->
+                        <img src="/images/zeyad.jpg" alt="Icon from the folder">
+                        <h3>Lorem ipsum</h3>
+                        <p class="font-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="ticket column-flex">
+                        <img src="/images/zeyad.jpg" alt="Icon from the folder">
+                        <h3>Lorem ipsum</h3>
+                        <p class="font-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="ticket column-flex">
+                        <img src="/images/zeyad.jpg" alt="Icon from the folder">
+                        <h3>Lorem ipsum</h3>
+                        <p class="font-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <div class="ticket column-flex">
+                        <!-- <span class="holberton_school-icon-ic_hearing"></span> -->
+                        <img src="/images/zeyad.jpg" alt="Icon from the folder">
+                        <h3>Lorem ipsum</h3>
+                        <p class="font-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+        <!-- Section 3 - Our results -->
+         </section>
+         <Section class="section-3 column-flex">
+             <div class="intro column-flex">
+                 <h2>Our results speak for themselves</h2>
+                 <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+         </div>
+         <div class="pentagone-container row-flex">
+            <div class="ticket pentagone column-flex">
+                <h3><strong>+2%</strong></h3>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            
+         </div>
+         </Section>
         <main>
             
         </main>
